String::fromUTF8() should take advantage of the ASCII check in convertUTF8ToUTF16() https://bugs.webkit.org/show_bug.cgi?id=100577

Reviewed by Oliver Hunt.

Passed is ASCII flag to convertUTF8ToUTF16() and if try, create an 8 bit string from the original arguments.

* wtf/text/WTFString.cpp:
(WTF::String::fromUTF8):


Canonical link: https://commits.webkit.org/118639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132736 268f45cc-cd09-0410-ab3c-d52691b4dbfc